--- a/views/add.purchase.reglement.html
+++ b/views/add.purchase.reglement.html
@@ -47,6 +47,8 @@
             <select class="form-control" ng-model="item.paiement">
               <option value="espéces">Espéces</option>
               <option value="chéques">Chéques</option>
+              <option value="avoir">Avoir</option>
+              
               
             </select>
           </td>
