--- a/views/configuration-step2.html
+++ b/views/configuration-step2.html
@@ -22,7 +22,9 @@
 
           <br>
           <button class="btn btn-primary" ng-click="conf.saveCompany()">Enregistrer </button>
-           <button class="btn btn-primary" ng-click="conf.quit()">Quitter</button>   
+          <a class="btn btn-primary" ui-sref="conf">Retour à la configuration </a>
+          
+          <button class="btn btn-primary" ng-click="conf.quit()">Quitter</button>   
           <!--<button class="btn btn-primary" ng-click="conf.nextStep('conf.step3')">Etape suivante</button>-->
                       
         </div>
@@ -44,7 +46,9 @@
                       <label>ICE</label><input type="text" class="form-control" ng-model="company.ice"></input>
                       <br>
                       <button class="btn btn-primary" ng-click="conf.saveCompany()">Enregistrer </button>
-                       <button class="btn btn-primary" ng-click="conf.quit()">Quitter</button>   
+                      <a class="btn btn-primary" ui-sref="conf">Retour à la configuration </a>
+                      
+                      <button class="btn btn-primary" ng-click="conf.quit()">Quitter</button>   
        </div>
         <div class="col-md-4">
                       <label>R.C</label><input type="text" class="form-control" ng-model="company.rc"></input>
@@ -77,7 +81,10 @@
 
           <br>
           <button class="btn btn-primary" ng-click="conf.saveCompany()">Enregistrer </button>
+          <a class="btn btn-primary" ui-sref="conf">Retour à la configuration </a>
+          
           <button class="btn btn-primary" ng-click="conf.quit()">Quitter</button>  
+
           
           
         </div>
