--- a/views/configuration.html
+++ b/views/configuration.html
@@ -57,11 +57,11 @@ Veuillez suivre ces étapes pour configurer l'application:
 <ol>
   <li>Sélectionnez le type de base de données (Laissez <b>sqlite</b> si vous voulez utiliser un fichier pour la base de données)</li>
   <li>Pour MySQL ou PostgreSQL entrez les informations de connexion à la base de données (Serveur:127.0.0.1 - Utilisateur:root - Mot de passe et nom de base de données)  </li>
-  <li>Clickez sur <b>-Sauvegarder la configuration-</b> et attendez l'affichage de message vert (<b>Base de données crée avec succés!</b>) seulement dans la premiére fois </li>
+  <li>Clickez sur <b>-Sauvegarder la configuration-</b> et attendez l'affichage de message vert (<b>Base de données et utilisateur admin crées avec succés!</b>) seulement dans la premiére fois </li>
   <li>Si vous voulez supprimer l'ancienne configuration et créer une nouvelle configuration clickez sur <b>-Supprimer la configuration-</b></li>
   <li>Clickez sur <b>-Créer Société-</b> et entrez les informations de société (aprés le sauvegarde de la configuration)</li>
   <li>Pour SQLite les buttons de backup et restauration sont désactivés</li>
-  <li>Pour SQlite vous pouvez trouver le fichier de base de donnée: <b>database.sqlite</b> (le sauvegarde) dans le dossier <b>/home</b></li>
+  <li>Pour SQlite vous pouvez trouver le fichier de base de donnée dans le dossier personnel: <b>{{sqlite_db}}</b></li>
 
 </ol>
 </div>
