--- a/views/list.customer.html
+++ b/views/list.customer.html
@@ -25,6 +25,24 @@
     </div>    
         
 </div>  
+<div class="row">
+    <div class="col-xs-12">
+  <p>
+    Somme positive
+    <span>:</span>
+    {{calculatePositiveTotal()}}
+ 
+      Somme négative
+      <span>:</span>
+      {{calculateNegativeTotal()}}
+  
+        Somme totale
+        <span>:</span>
+        {{calculateTotal()}}
+      </p>      
+      </div>
+      
+</div>
       <div class="row">
          <div class="col-xs-12">
            
