--- a/views/select.customer.html
+++ b/views/select.customer.html
@@ -39,6 +39,7 @@
                     <th>ID</th>
                     <th>Réference</th>
                     <th>Nom</th>
+                    <th>Solde</th>
                     <th>Représentant</th>
                     <th>Tél</th>
                     <th>Email</th>
@@ -47,6 +48,7 @@
                     <td>{{e.id}}</td>
                     <td>{{e.reference}}</td>
                     <td>{{e.nom}}</td>
+                    <td>{{e.solde}}</td>
                     <td>{{e.representant}}</td>
                     <td>{{e.tel}}</td>
                     
