--- a/views/add.quotation.html
+++ b/views/add.quotation.html
@@ -8,7 +8,7 @@
     <div class="col-md-12" style="padding: 10px;text-transform: uppercase;">
       
           <button class="btn" ng-click="ctrl.clear()"> Nouveau</button> 
-          <button class="btn" ng-click="ctrl.add()"  ng-show="!item.id" ng-disabled="item.id"> Enregistrer</button>
+          <button class="btn" ng-click="ctrl.add()"  ng-show="!item.id" ng-disabled="item.id || !item.ClientId || !item.date"> Enregistrer</button>
           <!--
           <button class="btn" ng-click="ctrl.update()"  ng-show="item.id" ng-disabled="!item.id"> Métre à jour</button>
           -->
