--- a/views/add.sale.order.html
+++ b/views/add.sale.order.html
@@ -3,7 +3,7 @@
     <div class="col-md-12" style="padding: 10px;">
       
           <button class="btn" ng-click="ctrl.clear()"> Nouveau</button> 
-          <button class="btn" ng-click="ctrl.add()"  ng-hide="item.id" ng-disabled="item.reference === undefined || item.reference === ''"> Enregistrer</button>
+          <button class="btn" ng-click="ctrl.add()"  ng-hide="item.id" ng-disabled="!item.ClientId || !item.date || item.reference === undefined || item.reference === ''"> Enregistrer</button>
 
           <button class="btn" ng-click="ctrl.update()"  ng-hide="!item.id" ng-disabled="(item.FactureId !== undefined && item.FactureId !== null )  || (item.LivraisonVenteId !== undefined && item.LivraisonVenteId !== null)|| (item.reference === undefined || item.reference === '') || item.livree "> Modifier</button>   
 
