--- a/views/list.sale.delivery.html
+++ b/views/list.sale.delivery.html
@@ -65,6 +65,18 @@
     </div>    
     
 </div>  
+
+<div class="row">
+    <div class="col-xs-12">
+  <p>
+        Somme totale
+        <span>:</span>
+        {{calculateTotal()}}
+      </p>      
+      </div>
+      
+</div>
+
 <div class="row" ui-view>
          <div class="col-xs-12">
             <div class="box-body table-responsive ">
