--- a/views/add.sale.delivery.html
+++ b/views/add.sale.delivery.html
@@ -5,14 +5,14 @@
           <button class="btn" ng-click="ctrl.clear()"> Nouveau</button> 
           <button class="btn" ng-click="ctrl.add()"  ng-hide="item.id" ng-disabled="item.id || item.reference === undefined || item.reference === '' || item.payee || client.reference === undefined || client.reference === '' || item.date === undefined || item.date === ''"> Enregistrer</button>
              
-          <button class="btn" ng-click="ctrl.update()"  ng-show="item.id" ng-disabled="item.reference === undefined || item.reference === ''  "> Mettre à Jour</button>
+          <button class="btn" ng-click="ctrl.update()"  ng-show="item.id" ng-disabled="item.reference === undefined || item.reference === '' || item.payee "> Mettre à Jour</button>
         
           <button class="btn" ng-click="ctrl.hideCompanyDetails()"> Cacher les info de société </button>
           <button class="btn" ng-click="ctrl.showCompanyDetails()"> Afficher les info de société </button>
 
           <button class="btn" ng-click="ctrl.print()"> Imprimer </button> 
          
-          <button class="btn" ng-click="ctrl.encaisse()" ng-disabled="!item.id || item.payee"> Régler </button>
+          <!--<button class="btn" ng-click="ctrl.encaisse()" ng-disabled="!item.id || item.payee"> Régler </button>-->
           <label ng-show="item.payee" style="background: red;text-transform: uppercase;">Payé</label>
       
       </div>
