--- a/views/list.sale.delivery.html
+++ b/views/list.sale.delivery.html
@@ -17,7 +17,7 @@
           <a class="btn" ng-click="ctrl.selectAll()" > Sélectionner Tout </a>
           <a class="btn" ng-click="ctrl.unSelectAll()" ng-show="selections.length > 0"> Désélectionner Tout </a>
           <a class="btn" ng-show="selected.id" ng-show="hasDetails" ui-sref="{{ ctrl.getDetailsState() }}">Détails</a> 
-          <a class="btn" ng-show="selections.length > 0" ng-click="ctrl.encaisseSelected()">Régler</a> 
+          <button class="btn" ng-show="selections.length > 0" ng-disabled="selected.payee" ng-click="ctrl.encaisseSelected()">Régler</button> 
 
      
           <a class="btn" ng-click="ctrl.nextPage()" style="float: right;"> Suivant </a>
